Modificados ficheros de busqueda de refactorizaciones por scope.